# taskdog

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  WORKFLOW.landing.yaml  WORKFLOW.taskdog.yaml  WORKFLOW.test.yaml  WORKFLOW.yaml.example  docker-compose.yml  pyproject.toml
scripts/: setup-branch-protection.sh  setup_branch_protection.py
src/taskdog/: __init__.py  __main__.py  cli.py  config.py  events.py  models.py  prompt.py  runner.py  workspace.py
src/taskdog/trackers/: __init__.py  base.py  github.py  memory.py  registry.py
