[project]
name = "taskdog"
version = "0.1.0"
description = "Autonomous coding agent orchestrator powered by Claude"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "pydantic>=2.6",
    "jinja2>=3.1",
    "structlog>=24.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
taskdog = "taskdog.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/taskdog"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
